# Vechicle-detection

./: Blob.cpp  CMakeCache.txt  CMakeLists.txt  Feed.cpp  Feed.h  Feed123.cpp  Feeds.txt  Lot A.txt  Lot B.txt  Lot C.txt  Lot.cpp  Lot.h  LotA.txt  LotB.txt  LotC.txt  Lots.txt  Makefile  README.md  cmake_install.cmake  lotMonitor  lots.json  main.cpp  vechile detection2.vcxproj  vechile detection2.vcxproj.filters
Debug/vechile .F1E75F14.tlog/: vechile detection2.lastbuildstate
x64/Release/vechile .F1E75F14.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vechile detection2.lastbuildstate  vechile detection2.write.1u.tlog
