cmake_minimum_required(VERSION 2.8)
project( lotMonitor )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( lotMonitor Feed.cpp Blob.cpp Lot.cpp json.hpp main.cpp )
target_link_libraries( lotMonitor ${OpenCV_LIBS} )
target_compile_features(lotMonitor PRIVATE cxx_range_for)
